# trabalho-de-persist-ncia

./: .env  .gitignore  README.md  apresentacao.txt  custom_logger.py  data.csv  data.sqlite  database.py  divisao-equipe.txt  links.csv  logger.py  main.py  populate.py  pyproject.toml  requirements.txt
core/: config.py  server.py
database/: database.py  table.py
models/: __init__.py  java_links.py  map.py  minecraft_maps.py  operators.py  server.py  servers.py  servers_properties.py  software.py  softwares.py  user.py  users.py
routers/: home.py  java.py  java_links.py  map.py  minecraft_maps.py  operator.py  server.py  server_operators.py  server_properties.py  servers.py  servers_properties.py  software.py  softwares.py  user.py  (+1 more)
src/: data.sqlite  fakera.py  main.py  old_main.py  populate.py  pyproject.toml  schemas.py  script_seed_api.py  test_real_routes.py  test_server_properties.py
src/api/: main.py  schemas.py
src/controller/: controller.py  user.py
src/core/: server.py
src/data/: __init__.py  dump.py  main.py
src/data/database/: database.py
src/data/repositories/: server.py  user.py
src/data/store/: data.csv  server_data.csv  server_index.seq  user_data.csv  user_index.seq
src/database/: database.py
src/database/repositories/: server.py
src/migrations/: env.py
src/migrations/versions/: 0b86ceee8845_configuracao_inicial.py
src/models/: __init__.py  java.py  maps.py  operator.py  server.py  server_properties.py  software.py  user.py
src/routers/: java.py  map.py  operator.py  server.py  server_properties.py  software.py  user.py
(+1 files in other folders)
