[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "colorlog>=6.10.1",
    "fastapi[standard]>=0.121.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]
